Add a protected broadcast for Masquerade events
Parse extras to get event details. Docs will be available
in Masquerade source code

Change-Id: I24ca3d11438bb830ce97af8b0e935c0700b394e6

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -526,6 +526,8 @@
     <!-- ====================================================================== -->
     <eat-comment />
 
+    <protected-broadcast android:name="masquerade.substratum.STATUS_CHANGED" />
+
     <!-- ====================================================================== -->
     <!-- Permissions for accessing user's contacts including personal profile   -->
     <!-- ====================================================================== -->
